--- a/apps/test/src/app/app.component.html
+++ b/apps/test/src/app/app.component.html
@@ -1,1 +1,17 @@
-<test-nx-welcome></test-nx-welcome> <router-outlet></router-outlet>
+<!--<test-nx-welcome></test-nx-welcome> <router-outlet></router-outlet>-->
+<h1>Welcome to app!!</h1>
+
+<hoa-checkbox
+  [disabled]="disabled"
+  [checked]="checked"
+  [indeterminate]="indeterminate"
+></hoa-checkbox>
+
+<!-- <hoa-checkbox data-test="hoa-checkbox--1" [checked]="true"></hoa-checkbox>
+
+<hoa-checkbox
+  [disabled]="disabled"
+  [checked]="false"
+  [indeterminate]="false"
+  data-test="hoa-checkbox--2"
+></hoa-checkbox> -->
